@@ -721,6 +721,7 @@ The distribution should contain the following files:
   doc/perltest.txt        plain text documentation of Perl test program
   install-sh              a shell script for installing files
   libpcre.pc.in           template for libpcre.pc for pkg-config
+  libpcreposix.pc.in      template for libpcreposix.pc for pkg-config 
   libpcrecpp.pc.in        template for libpcrecpp.pc for pkg-config
   ltmain.sh               file used to build a libtool script
   missing                 ) common stub for a few missing GNU programs while
@@ -764,4 +765,4 @@ The distribution should contain the following files:
 Philip Hazel
 Email local part: ph10
 Email domain: cam.ac.uk
-Last updated: 21 March 2009
+Last updated: 15 August 2009
